--- a/index.html
+++ b/index.html
@@ -77,27 +77,17 @@
             <h1 class="gradient-text">ABOUT ME</h1>
             <p>
               <br />
-              <b>TL;DR:</b> Name’s Ayaan, creates cool stuff. Hire him.
-              <br /><br />
-              Hey there! I’m Ayaan, a creative technologist and product designer based in Columbus, Ohio, and with roots in New Delhi, India. I design, code, edit, beatbox, and bike! 
-
-              I'm currently a sophomore and Schimmel Scholar at <a href="https://owu.edu"> Ohio Wesleyan University</a>, where I'm studying Computer Science and Psychology with a minor in Anthropology.
-              Over the summer of 2023, I completed a Digital Product Management internship at <a href="https://www.elevancehealth.com/"> Elevance Health. </a>Previously, I’ve worked with <a target="_blank" href="https://app24.co.in">App24 India </a> as a Product Designer. 
-              
-              At OWU, I'm a part of The OWtsiders A Capella group, and work at <a href="https://www.owu.edu/academics/departments-programs/economics-and-business-department/the-woltemade-center/"> The Woltemade Center</a> as a Design and Marketing strategist.
-              I am also handling event logistics at <a href="https://pinnacle.us.org/"> Pinnacle, The Olympics of Hackathons </a>. Apart from that, I'm heading Outreach and Design at <a href="https://techcircuit.co/">techCircuit</a>, a platform for connecting high school tech enthusiasts in India. 
-              I cofounded <a href="https://cryptichunt.com">Cryptocracy, an
-              international cryptic hunt and CTF </a> for two years, where we saw global participation in thousands and coordinated with huge sponsors to give out prizes 
-              worth $7,000. 
+              Hey there! I’m Ayaan!
+                <br>
+                <br>
+              I'm currently a sophomore at <a href="https://www.iitj.ac.in/"> Indian Institute of Technology, Jodhpur</a>, where I'm studying Mechanical Engineering.
+              <!-- Over the summer of 2023, I completed a Digital Product Management internship at <a href="https://www.elevancehealth.com/"> Elevance Health. </a>Previously, I’ve worked with <a target="_blank" href="https://app24.co.in">App24 India </a> as a Product Designer.  -->
+              <br>
+              <br>
+              As an undergraduate researcher in AI and Machine Learning, my work focuses on advancing computer vision, generative AI models, and robotics. My research emphasizes machine vision and the development of human-machine interaction frameworks, integrating innovative solutions to bridge computational efficiency and real-world applicability
                  <br /><br />
-                 In the past, I have been actively involved with
-              <a href="https://thegirlcode.co" target="_blank">The Girl Code, </a> a non-profit aimed at introducing tech and programming to young women worldwide, 
-              and <a href="https://femmefirst.org" target="_blank">Femme First Foundation,</a> an organization passionate about bringing women into political leadership.  
-              <br /><br />
-              My school life was cool. In my time as the Vice President at <a target="_blank" href="https://hailcore.co" target="_blank">CORE</a>, the computers and technology society at my high school- <a href="https://dpsdwarka.com">Delhi
-              Public School, Dwarka,</a> I helped conduct tech symposiums with over 600 participants each year for 4 years, and as a part of a training camp, I actively mentored 500+ students in design, development, and video editing.
-              <br /><br />
-              You can check out my <a href="https://ine.sh/resume" target="_blank">resume here.
+
+              You can check out my <a href="/files/Ayaan_resume.pdf" target="_blank">resume here</a>
               <br><br>
                 <a id="check" href="#projects">
                   <span class="exptitle" class="gradient-text"> Check out my work</span>
