--- a/index.html
+++ b/index.html
@@ -96,16 +96,30 @@
 
 
 
-<div class="inner" id="Work">
+  <div class="inner" id="Work">
     <div class="poop">
-        <h1 class="gradient-text">Work Exp</h1>
+        <h1 class="gradient-text">Work Experience</h1>
         <p>
-          <br>
-          If you think we can do something cool together, feel free to contact me using the options below.
+            <br>
+            <strong>Department of Mechanical Engineering, IIT Jodhpur</strong><br>
+            <em>Undergraduate Researcher (Supervisor: Prof. Riby Abraham Boby) </em><br>
+            Driving the development of robotics for assembly line automation by integrating Learning from Demonstration (LfD) techniques to enable task-specific skill acquisition through human observation, while advancing shared automation frameworks to optimize human-robot collaboration and validate real-world industrial applications.
+            <br><br>
+
+            <strong>Department of Computer Science, IIT Jodhpur</strong><br>
+            <em>Undergraduate Researcher (Supervisor: Prof. Palash Das) </em><br>
+            Spearheading the development of a hardware accelerator for generative models (GANs), optimizing computational efficiency for resource-constrained devices.
+            <br><br>
+
+            <strong>Kites AI, Gurgaon, Haryana</strong><br>
+            <em>Intern</em><br>
+            Developed and implemented OCR solutions using libraries such as OpenCV, Tesseract, PaddleOCR, and LayoutParser for processing health and medical invoices in a collaborative project with IIT Delhi and AIIMS a achieving 91.7% accuracy. 
+            <br>
+            Enhanced Lipikaar, an OCR library developed by IIT Delhi for indigenous languages, by identifying bugs and implementing improvements that increased character recognition accuracy by an estimated 20% and improved overall language processing capabilities.
         </p>
     </div>
-    
-  </div>
+</div>
+
 
 
 
@@ -143,7 +157,7 @@
           <li><a target="_blank" href="mailto:b23me1013@iitj.ac.in" class="fa fa-envelope"></a></li>
           </ul>
       </div>
-      <form class="contactform" action="" method="POST">
+      <!-- <form class="contactform" action="" method="POST">
         <label class="gradient-text" for="name">Name</label>
         <input id="name" required type="text" name="name" placeholder="Ann Perkins">
         <label class="gradient-text" for="email">Email</label>
@@ -152,13 +166,13 @@
         <textarea id="message"  name="message" cols="30" rows="10" placeholder="Hey, let's connect" required> </textarea>
         <input id="submit"  type="submit"  value="Submit">
       </form>
-  </div>
+  </div> -->
   
 </div>
 
 <div id="footer" class="inner">
   <div  class="poop">
-  <p  class="gradient-text" class="copy"> &copy 2021 Ayaan Choudhury
+  <p  class="gradient-text" class="copy"> &copy 2024 Ayaan Choudhury
 
     <br>  </p>
   <p  class="gradient-text" class="mail"><a href="mailto:b23me1013@iitj.ac.in">b23me1013@iitj.ac.in</a></p>
