--- a/index.html
+++ b/index.html
@@ -1,19 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="title" content="Ayaan Choudhury | Undergrad at IIT Jodhpur">
-    <meta name="description" content="Ayaan Choudhury is an undergraduate studying at Indian Institute of Technology, Jodhpur.">
-    <meta name="keywords" content="Ayaan, Ayaan Choudhury, Choudhury, DPS Dwarka, Delhi Public School, Dwarka, Undergrad, IIT Jodhpur, AI/ML Researcher">
-    <meta name="robots" content="index, follow">
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <meta name="language" content="English">
-    <meta name="author" content="Ayaan Choudhury">
-    <meta property="og:title" content="Ayaan Choudhury | Undergrad at IIT Jodhpur">
-    <meta property="og:description" content="Ayaan Choudhury is an undergraduate studying at Indian Institute of Technology, Jodhpur.">
-
     <link rel="icon" href="./favicon.png">    
     <title>Ayaan Choudhury</title>
     <link rel="stylesheet" href="./css/style.css" />
@@ -21,11 +8,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="./assets/fonts/stylesheet.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
-
   </head>
-  <body>
     
+
     <div class="navmob">
       <i class="fa fa-times" id="cross"></i>
       <ul>
@@ -57,7 +42,7 @@
         </ul>
       </div>
         <div class="header">
-          <h1 class="slight-text">YO, I'M</h2>
+          <h1 class="slight-text">HI THERE, I'M</h2>
           <h1 class="gradient-text">AYAAN</h1>
         </div>
             <img src="./Ayaan2.jpeg" alt="" srcset="" />
@@ -84,7 +69,10 @@
               <!-- Over the summer of 2023, I completed a Digital Product Management internship at <a href="https://www.elevancehealth.com/"> Elevance Health. </a>Previously, I’ve worked with <a target="_blank" href="https://app24.co.in">App24 India </a> as a Product Designer.  -->
               <br>
               <br>
-              As an undergraduate researcher in AI and Machine Learning, my work focuses on advancing computer vision, generative AI models, and robotics. My research emphasizes machine vision and the development of human-machine interaction frameworks, integrating innovative solutions to bridge computational efficiency and real-world applicability
+              As an undergraduate researcher in AI and Machine Learning, my work focuses on advancing computer vision, generative AI models, and robotics. My research emphasizes machine vision and the development of human-machine interaction frameworks, integrating innovative solutions to bridge computational efficiency and real-world applicability.
+              <br>
+              <br>
+              I have a deep love for music and have been playing the drums since I was 10. As an active member of Sangam, the music club at IIT Jodhpur, I have performed at various events and festivals, including Inter IIT competitions and our college fests.
                  <br /><br />
 
               You can check out my <a href="/files/Ayaan_resume.pdf" target="_blank">resume here</a>
@@ -101,19 +89,24 @@
         <h1 class="gradient-text">Work Experience</h1>
         <p>
             <br>
-            <strong>Department of Mechanical Engineering, IIT Jodhpur</strong><br>
-            <em>Undergraduate Researcher (Supervisor: Prof. Riby Abraham Boby) </em><br>
+            <strong style="color: white; font-weight: 900;">Department of Mechanical Engineering, IIT Jodhpur</strong><br>
+            <em><p style="font-weight: 600; font-style: italic">Undergraduate Researcher (Supervisor: <a href="https://sites.google.com/view/ribyabrahamboby/home" target="_blank">Prof. Riby Abraham Boby</a>)</p></em><br>
+            <p style="font-weight: 500; font-style: normal">
             Driving the development of robotics for assembly line automation by integrating Learning from Demonstration (LfD) techniques to enable task-specific skill acquisition through human observation, while advancing shared automation frameworks to optimize human-robot collaboration and validate real-world industrial applications.
+            </p>
             <br><br>
 
-            <strong>Department of Computer Science, IIT Jodhpur</strong><br>
-            <em>Undergraduate Researcher (Supervisor: Prof. Palash Das) </em><br>
+            <strong style="color: white; font-weight: 900;">Department of Computer Science, IIT Jodhpur</strong><br>
+            <em><p style="font-weight: 600; font-style: italic">Undergraduate Researcher (Supervisor: <a href="http://home.iitj.ac.in/~palashdas/" target="_blank">Prof. Palash Das</a>)</p></em><br>
+            <p style="font-weight: 500; font-style: normal">
             Spearheading the development of a hardware accelerator for generative models (GANs), optimizing computational efficiency for resource-constrained devices.
+            </p>
             <br><br>
 
-            <strong>Kites AI, Gurgaon, Haryana</strong><br>
-            <em>Intern</em><br>
-            Developed and implemented OCR solutions using libraries such as OpenCV, Tesseract, PaddleOCR, and LayoutParser for processing health and medical invoices in a collaborative project with IIT Delhi and AIIMS a achieving 91.7% accuracy. 
+            <strong style="color: white; font-weight: 900;">Kites AI</strong><br>
+            <em><p style="font-weight: 600; font-style: italic">Intern</p></em><br>
+            <p style="font-weight: 500; font-style: normal">
+            Developed and implemented OCR solutions using libraries such as OpenCV, Tesseract, PaddleOCR, and LayoutParser for processing health and medical invoices in a collaborative project with IIT Delhi and AIIMS a achieving 91.7% accuracy.
             <br>
             Enhanced Lipikaar, an OCR library developed by IIT Delhi for indigenous languages, by identifying bugs and implementing improvements that increased character recognition accuracy by an estimated 20% and improved overall language processing capabilities.
         </p>
@@ -156,18 +149,7 @@
           <li><a target="_blank" href="https://www.linkedin.com/in/ayaan-choudhury/" class="fa fa-linkedin"></a></li>
           <li><a target="_blank" href="mailto:b23me1013@iitj.ac.in" class="fa fa-envelope"></a></li>
           </ul>
-      </div>
-      <!-- <form class="contactform" action="" method="POST">
-        <label class="gradient-text" for="name">Name</label>
-        <input id="name" required type="text" name="name" placeholder="Ann Perkins">
-        <label class="gradient-text" for="email">Email</label>
-        <input id="email" required type="email" name="_replyto" placeholder="ann@parksandrec.com">
-        <label class="gradient-text" for="message">Message </label>
-        <textarea id="message"  name="message" cols="30" rows="10" placeholder="Hey, let's connect" required> </textarea>
-        <input id="submit"  type="submit"  value="Submit">
-      </form>
-  </div> -->
-  
+      </div>  
 </div>
 
 <div id="footer" class="inner">
