--- a/index.html
+++ b/index.html
@@ -90,26 +90,23 @@
         <p>
             <br>
             <strong style="color: white; font-weight: 900;">Department of Mechanical Engineering, IIT Jodhpur</strong><br>
-            <em><p style="font-weight: 600; font-style: italic">Undergraduate Researcher (Supervisor: <a href="https://sites.google.com/view/ribyabrahamboby/home" target="_blank">Prof. Riby Abraham Boby</a>)</p></em><br>
-            <p style="font-weight: 500; font-style: normal">
+            <em>Undergraduate Researcher (Supervisor: <a href="https://sites.google.com/view/ribyabrahamboby/home" target="_blank">Prof. Riby Abraham Boby</a>)</em><br>
+            <br>
             Driving the development of robotics for assembly line automation by integrating Learning from Demonstration (LfD) techniques to enable task-specific skill acquisition through human observation, while advancing shared automation frameworks to optimize human-robot collaboration and validate real-world industrial applications.
-            </p>
             <br><br>
 
             <strong style="color: white; font-weight: 900;">Department of Computer Science, IIT Jodhpur</strong><br>
-            <em><p style="font-weight: 600; font-style: italic">Undergraduate Researcher (Supervisor: <a href="http://home.iitj.ac.in/~palashdas/" target="_blank">Prof. Palash Das</a>)</p></em><br>
-            <p style="font-weight: 500; font-style: normal">
+            <em>Undergraduate Researcher (Supervisor: <a href="http://home.iitj.ac.in/~palashdas/" target="_blank">Prof. Palash Das</a>)</em><br>
+            <br>
             Spearheading the development of a hardware accelerator for generative models (GANs), optimizing computational efficiency for resource-constrained devices.
-            </p>
             <br><br>
 
             <strong style="color: white; font-weight: 900;">Kites AI</strong><br>
-            <em><p style="font-weight: 600; font-style: italic">Intern</p></em><br>
-            <p style="font-weight: 500; font-style: normal">
+            <em>Intern</em><br>
+            <br>
             Developed and implemented OCR solutions using libraries such as OpenCV, Tesseract, PaddleOCR, and LayoutParser for processing health and medical invoices in a collaborative project with IIT Delhi and AIIMS a achieving 91.7% accuracy.
             <br>
             Enhanced Lipikaar, an OCR library developed by IIT Delhi for indigenous languages, by identifying bugs and implementing improvements that increased character recognition accuracy by an estimated 20% and improved overall language processing capabilities.
-        </p>
     </div>
 </div>
 
