--- a/index.html
+++ b/index.html
@@ -150,3 +150,14 @@
     <br>  </p>
   <p  class="gradient-text" class="mail"><a href="mailto:b23me1013@iitj.ac.in">b23me1013@iitj.ac.in</a></p>
 </div>
+
+
+</div>
+<script>
+ 
+</script>
+<script src="./script.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.0/gsap.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.0/MotionPathPlugin.min.js"></script>
+</body>
+</html>
